feat: updated api url's and update methods
